@@ -35,9 +35,10 @@
 
 -->
 <Query tableName="view_job_times" limit="0" type="simple" category="Jobs" name="Wallclock time">
-   <description>Shows the graphical representation of total wallclock time in seconds, grouped by the job name.</description>
+   <description>Shows the graphical representation of total wallclock time in seconds for jobs 
+                that finished in the past hour, grouped by the job name.</description>
     <view>
-        <description visible="true"/>
+       <description visible="true"/>
         <parameter visible="true"/>
         <sql visible="true"/>
         <graphic legendVisible="true" order="0">
@@ -49,6 +50,8 @@
     </view>
     <field function="SUM" dbName="wallclock_time" reportName="sum_wallclock_time"/>
     <field function="VALUE" dbName="name" reportName="name"/>
+    <filter active="true" logicalConnection="" name="end_time" condition="greater" 
+            lateBinding="false" parameter="(SYSDATE - INTERVAL '1' HOUR)"/>
     <sql><!--In simple queries sql  is created at run time--></sql>
 </Query>
 
